# aioresilience

./: .coveragerc  .gitignore  CHANGELOG.md  INSTALL.md  INTEGRATIONS.md  LICENSE  MANIFEST.in  README.adoc  README.md  commit.bat  git-commit.ps1  git-helper.ps1  pyproject.toml  pytest.ini  requirements-all.txt  requirements-dev.txt  requirements-integrations.txt  requirements-redis.txt  requirements-system.txt  requirements.txt
.github/: SETUP_ACTIONS.md
.github/workflows/: ci.yml  coverage.yml  tests.yml
aioresilience/: __init__.py  adaptive_concurrency.py  backpressure.py  bulkhead.py  circuit_breaker.py  config.py  fallback.py  logging.py  retry.py  timeout.py
aioresilience/events/: __init__.py  bus.py  emitter.py  types.py
aioresilience/exceptions/: __init__.py  base.py  config.py  errors.py  handler.py  reasons.py
aioresilience/integrations/: __init__.py
aioresilience/integrations/aiohttp/: README.md  __init__.py  decorators.py  middleware.py  utils.py
aioresilience/integrations/fastapi/: README.md  __init__.py  adaptive_concurrency.py  backpressure.py  bulkhead.py  circuit_breaker.py  composite.py  decorators.py  dependencies.py  fallback.py  load_shedding.py  retry.py  timeout.py  utils.py
aioresilience/integrations/sanic/: README.md  __init__.py  decorators.py  middleware.py  utils.py
aioresilience/load_shedding/: __init__.py  basic.py  system.py
aioresilience/rate_limiting/: __init__.py  local.py  redis.py
benchmarks/: .gitignore  README.md  benchmark_concurrent.py  benchmark_sequential.py
dist_test/: aioresilience-0.1.0-py3-none-any.whl
examples/: events_example.py
tests/: README.md  conftest.py  debug_circuit_test.py
tests/integration/: test_aiohttp_extended.py  test_aiohttp_integration.py  test_circuit_breaker_events.py  test_fastapi_bulkhead_middleware.py  test_fastapi_circuit_breaker_middleware.py  test_fastapi_composite.py  test_fastapi_exceptions.py  test_fastapi_integration.py  test_fastapi_middleware.py  test_fastapi_retry_middleware.py  test_pattern_combinations.py  test_pattern_events.py  test_sanic_comprehensive.py  test_sanic_integration.py
tests/mocked/: __init__.py  test_redis_rate_limiting.py  test_system_load_shedding.py
tests/stress/: __init__.py  test_high_concurrency.py
tests/unit/: test_adaptive_concurrency.py  test_backpressure.py  test_bulkhead.py  test_circuit_breaker.py  test_events.py  test_events_comprehensive.py  test_exception_edge_cases.py  test_exceptions.py  test_fallback.py  test_instance_decorators.py  test_load_shedding.py  test_logging.py  test_pattern_exceptions.py  test_rate_limiting.py  test_retry.py  test_timeout.py
