[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aioresilience"
version = "0.1.0"
description = "Async resilience patterns for Python - Circuit breakers, rate limiting, and more"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "xonming", email = "xonming@users.noreply.github.com"}
]
keywords = ["async", "asyncio", "resilience", "circuit-breaker", "rate-limiting", "backpressure", "fault-tolerance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Typing :: Typed",
]

dependencies = [
    "aiolimiter>=1.0.0",
]

[project.optional-dependencies]
redis = [
    "redis>=4.5.0",
]
system = [
    "psutil>=5.9.0",
]
fastapi = [
    "fastapi>=0.100.0",
    "starlette>=0.27.0",
]
sanic = [
    "sanic>=23.0.0",
    "sanic-testing>=23.3.0",
]
aiohttp = [
    "aiohttp>=3.8.0",
]
integrations = [
    "fastapi>=0.100.0",
    "starlette>=0.27.0",
    "sanic>=23.0.0",
    "sanic-testing>=23.3.0",
    "aiohttp>=3.8.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.1.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
    "httpx>=0.24.0",
    "build>=0.10.0",
    "twine>=4.0.0",
    "wheel>=0.40.0",
]
all = [
    "redis>=4.5.0",
    "psutil>=5.9.0",
    "fastapi>=0.100.0",
    "starlette>=0.27.0",
    "sanic>=23.0.0",
    "sanic-testing>=23.3.0",
    "aiohttp>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/xonming/aioresilience"
Documentation = "https://github.com/xonming/aioresilience#readme"
Repository = "https://github.com/xonming/aioresilience"
Issues = "https://github.com/xonming/aioresilience/issues"
Changelog = "https://github.com/xonming/aioresilience/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["aioresilience*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"aioresilience" = ["py.typed"]
